# nionswift-plugin-sample

./: .travis.yml  CHANGES.rst  README.rst  meta.yaml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
nionswift_plugin/sample/: SampleMenuItem.py  __init__.py
nionswift_plugin/sample/test/: Sample_test.py
samplelib/: sampler.py
samplelib/test/: samplelib_test.py
