[metadata]
name = nionswift-plugin-sample
version = 0.1.0
author = Your Name
author_email = your@email.com
description = Description.
long_description = file: README.rst, CHANGES.rst, LICENSE
url = https://github.com/your-organization/your-project
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = ~=3.8
install_requires =
    nionswift

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.sample
    nionswift_plugin.sample.test
